testdata/baselines/reference/submodule/compiler/jsDeclarationEmitExportAssignedArray.errors.txt
file.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== file.js (1 errors) ====
    module.exports = [{ name: 'other', displayName: 'Other', defaultEnabled: true }];
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.